--- a/circle.yml
+++ b/circle.yml
@@ -1,12 +1,24 @@
 machine:
   services:
     - docker
+  environment:
+    APP_NAME: nodewebapp
 
 dependencies:
-
+  cache_directories:
+    - circle_cache
+    - node_modules
+    - "~/docker"
   pre:
     - docker version
     - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASSWORD
+    - docker build -t harishnag/nodewebapp:$CIRCLE_SHA1 .
+
+    override:
+    - ./build/apply_cached_timestamp circle_cache exporter/package.json 
+
+test:
+  override:
     - docker build -t harishnag/nodewebapp:$CIRCLE_SHA1 .
 
 deployment:
@@ -14,4 +26,4 @@ deployment:
     branch: master
     commands:
       - docker push harishnag/nodewebapp:$CIRCLE_SHA1
-      
+      - ./build/send_to_deploybot_inbox $CIRCLE_SHA1
