--- a/app-config.json
+++ b/app-config.json
@@ -5,6 +5,12 @@
         "appservice": "testharish",
         "apptaskdefinition": "TrialHarish",
         "appimage":"harishnag/nodewebapp"
+      }, 
+      "production": {
+        "appcluster": "nodewebappwest",
+        "appservice": "testharish",
+        "apptaskdefinition": "TrialHarishwest",
+        "appimage":"harishnag/nodewebapp"
       }  
   }
 }
